# LLM-Assistant

./: .gitignore  ROBUSTNESS_ENHANCEMENTS.md  pyproject.toml
architecture_flows/: 01_system_initialization_flow.xml  02_file_upload_flow.xml  03_query_processing_flow.xml  04_error_handling_recovery_flow.xml  05_monitoring_dashboard_flow.xml
architecture_flows_2.0/: 01_system_architecture_overview.md  02_authentication_flow.md  03_document_upload_processing.md  04_query_processing_flow.md  05_data_architecture_diagram.md  06_deployment_architecture.md  07_security_architecture.md  08_monitoring_observability.md  09_openshift_deployment_details.md  10_openshift_configuration_guide.md  README.md
backend/: .dockerignore  Dockerfile  benchmark.py  index_create.py  init_faiss.py  main.py  rag_pipeline.py  requirements.txt
backend/config/: advanced_prompts.py  greetings.json  llm_config.py  performance_config.py  prompt_optimization.py  web_search_config.py
backend/parsers/: enhanced_parser.py  html_parser.py  oc_parser.py  pdf_parser.py  shell_parser.py  yaml_parser.py
backend/rhel_faiss_index/: index.faiss  index.pkl
backend/routes/: api.py  oauth.py
backend/services/: web_search.py
backend/vector_store/: faiss_store.py  optimized_retrieval.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: ragApi.js
frontend/src/components/: AnswerDisplay.jsx  ChatContainer.jsx  ChatInput.jsx  EnvDebug.jsx  Message.jsx  (+10 more)
ollama/: Dockerfile  init-models.sh
(+8 files in other folders)
